# pi_theorem

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  gui.py  pi_theorem.py  preset_variables.json  preset_variables.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  examples.py  health.py  library.py  pi.py
backend/app/core/: dimensions.py  pi_theorem.py
backend/app/data/: examples.yaml  library.yaml
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  example_service.py  library_service.py  solver_service.py
backend/tests/: __init__.py  test_api.py  test_dimensions.py  test_pi_theorem.py
docs/: ARCHITECTURE.md  FUTURE.md  GIT_GUIDE.md  ROADMAP.md  STACK.md  UI_UX.md
docs/screenshots/: README.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/public/data/: examples.json  library.json
frontend/scripts/: sync-pyodide-core.mjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  engine.ts  pyodideEngine.ts
frontend/src/components/: DimensionMatrix.tsx  ExamplesMenu.tsx  Footer.tsx  Header.tsx  LanguageToggle.tsx  LibraryPanel.tsx  PiGroupCard.tsx  ResultsPanel.tsx  ThemeToggle.tsx  VariableForm.tsx  VariableTable.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/i18n/: en.json  fr.json  index.ts
frontend/src/lib/: Katex.tsx  baseDimensions.ts  export.ts  format.ts
frontend/src/pyodide/pycore/: bridge.py
frontend/src/pyodide/pycore/app/: __init__.py
frontend/src/pyodide/pycore/app/core/: __init__.py  dimensions.py  exceptions.py
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
legacy/: README.md  preset_variables.yaml
